--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <!-- Bootstrap Stylesheet Added -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Custom CSS Added -->
+    <link rel="stylesheet" href="style.css">
   <title>Panda-eCommerce</title>
 </head>
 
@@ -46,18 +48,58 @@
     </nav>
     <!-- Carousel Section -->
 
-    <div class="banner container">
+    <div class="banner container my-5">
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
+          <div class="carousel-item active d-flex bg-warning p-3 custom-bg">
+            <div class="headphone-info col-lg-7 d-flex align-items-center">
+              <div>
+                <h1>Cool Dude Headphone
+                </h1>
+                <p>
+                  This is the best headphone in the world for people who just want to waste time in front of funky world.
+                </p>
+                <h1>$420</h1>
+                <button type="button" class="btn btn-danger btn-lg mt-3">Buy Now</button>
+              </div>
+            </div>
+            <div class="headphone-image col-lg-5">
+              <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
+            </div>
           </div>
-          <div class="carousel-item">
-            <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
+          <div class="carousel-item d-flex bg-warning p-3">
+            <div class="headphone-info col-lg-7 d-flex align-items-center">
+              <div>
+                <h1>Mega LCD TV For Sports
+                </h1>
+                <p>
+                  This is the best tv in the world for people who just want to waste time in front of tv.
+                </p>
+                <h1>$1200</h1>
+                <button type="button" class="btn btn-danger btn-lg mt-3">Buy Now</button>
+              </div>
+            </div>
+            <div class="headphone-image col-lg-5">
+              <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
+            </div>
           </div>
-          <div class="carousel-item">
-            <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="...">
+          <div class="carousel-item d-flex bg-warning p-3">
+            <div class="headphone-info col-lg-7 d-flex align-items-center">
+              <div>
+                <h1>X-Box for your living room
+                </h1>
+                <p>
+                  This is the best x-box in the world for people who just want to waste time in front of fake sports.
+                </p>
+                <h1>$600</h1>
+                <button type="button" class="btn btn-danger btn-lg mt-3">Buy Now</button>
+              </div>
+            </div>
+            <div class="headphone-image col-lg-5">
+              <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="...">
+            </div>
           </div>
+          
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
