--- a/index.html
+++ b/index.html
@@ -155,9 +155,103 @@
   </header>
   <main>
     <!-- Shoes Section  -->
-    <div class="container">
+    <div class="container-fluid bg-light my-5 ">
+      <div class="container ">
+        <div class="d-flex justify-content-between pt-4">
+          <h1>Shoes</h1>
+          <p>Sell All</p>
+        </div>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-2 ">
+          <div class="col-12 col-lg-4 col-md-6  ">
+            <div class="card h-100 border-0 shadow ">
+              <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h4 class="card-title">Supply 350
+                </h4>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                <h2>$120</h2>
+              </div>
+              <div class="card-footer border-0 bg-white">
+                <button type="button" class="btn btn-dark btn-lg">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4 col-md-6 ">
+            <div class="card h-100 border-0 shadow">
+              <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike 360</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="card-footer border-0 bg-white">
+                <button type="button" class="btn btn-dark btn-lg">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4 col-md-6 ">
+            <div class="card h-100 border-0 shadow ">
+              <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="card-footer border-0 bg-white">
+                <button type="button" class="btn btn-dark btn-lg">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <div class="container ">
+        <div class="d-flex justify-content-between pt-4">
+          <h1>Bags</h1>
+          <p>Sell All</p>
+        </div>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-2 ">
+          <div class="col-12 col-lg-4 col-md-6  ">
+            <div class="card h-100 border-0 shadow ">
+              <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h4 class="card-title">Supply 350
+                </h4>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                <h2>$120</h2>
+              </div>
+              <div class="card-footer border-0 bg-white">
+                <button type="button" class="btn btn-dark btn-lg">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4 col-md-6 ">
+            <div class="card h-100 border-0 shadow">
+              <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike 360</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="card-footer border-0 bg-white">
+                <button type="button" class="btn btn-dark btn-lg">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4 col-md-6 ">
+            <div class="card h-100 border-0 shadow">
+              <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="card-footer border-0 bg-white">
+                <button type="button" class="btn btn-dark btn-lg">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <!-- Bags Section  -->
+    
   </main>
 
   <footer>
