--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <h1>Bags</h1>
           <p>Sell All</p>
         </div>
-        <div class="row row-cols-1 row-cols-md-3 g-4 mt-2 ">
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
           <div class="col-12 col-lg-4 col-md-6  ">
             <div class="card h-100 border-0 shadow ">
               <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
@@ -251,11 +251,27 @@
       </div>
     </div>
     <!-- Bags Section  -->
-    
+    <section>
+      <div class="container p-4  email d-flex align-items-center justify-content-center bg-warning">
+        <div class="mt-4">
+          <h1>LET'S STAY IN TOUCH
+          </h1>
+          <p>Get updates on sales, specials and more
+          </p>
+          <div class="mb-3 ">
+            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <input style="width: 300px;" type="email" class="form-control " id="exampleFormControlInput1" placeholder="name@example.com">
+            <button type="button" class="btn btn-danger btn-lg mt-2">Submit</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
-
+    <div class="text-center mt-5 bg-dark text-white p-3">
+      ©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.
+    </div>
   </footer>
 
   <!-- Bootstrap Script Added -->
